--- a/src/css/estilos_login/estilos_login.css
+++ b/src/css/estilos_login/estilos_login.css
@@ -1,242 +1,114 @@
-html{
-    min-height: 100vh;
-}
-
 body{
-    width: 100%;
-    height: 100vh;
-    font-size: 12px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: #000;
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form{
     background-color: #fff;
-    display: flex;
-    overflow: hidden;
+    width: 65%;
+    height: 400px;
+    display: grid;
+    grid-template-columns:40% 60%;
 }
 
-.login-container{
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+.form__div{
+    padding: 24px;
 }
 
-.login-container__form{
-    padding: 1em 2em;
-    width: 35%;
-    height: 95%;
-    display: flex;
-    flex-direction: column;
-    border-radius: 8px;
-    background: linear-gradient(to bottom, #004f71 0%, #004f71 35%, white 10%, white 100%);
-    box-shadow: 0px 2px 10px 1px #b1b1b1;
-}
-
-.login-container__form-left{
-    width: 100%;
-    height: 30%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.form__div--ladoIzquierdo{
+    background-color: #003366;
     text-align: center;
-    align-items: center;
-    color: #ffffff;
-}
-
-.login-container__form-left-icon{
-    font-size: 4em;
-    padding: 15px;
-    border: 5px solid white;
-    background-color: #1089be;
-    border-radius: 100px;
-    
-}
-
-.login-container__form-left h2{
-    font-size: 2em;
-    padding: 15px 0 10px;
-}
-
-.login-container__form-left p{
-    font-size: 1.4em;
-}
-
-.login-container__form-right{
-    width: 100%;
-    height: 70%;
+    font-weight: bold;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: space-around;
-    flex-direction: column;
+    border-radius: 15px 0px 0px 15px;
+}
+
+.form__div--ladoIzquierdo > .form__h1{
+    font-size: 2em;
+}
+
+.form__div--ladoIzquierdo > .form__icon{
+    font-size: 5em;
+    width: 120px;
+    border: 2px solid #fff;
+    padding: 20px;
+    border-radius: 50%;
+}
+
+.form__div--ladoIzquierdo > .form__p, .form__div--ladoDerecho > .form__p{
+    font-size: 1.5em;
+}
+
+.form__div--ladoDerecho{
+    border: 1px solid #003366;
+    color: #424242;
+    border-radius: 0px 15px 15px 0px;
+}
+
+.form__div--ladoDerecho > .form__p{
+    font-weight: bold;
     text-align: center;
+    padding: 1em 0 2em;
 }
 
-.login-container__form-right a{
-    text-decoration: none;
-    color: #000;
+.form__field{ 
+    width: 90%; 
+    margin: 1em auto;
 }
 
-.login-container__form-right a:hover{
-    text-decoration: underline;
-}
-
-.login-container__form-right-title{
-    font-size: 1.4em;
-    font-weight: bolder;
-}
-
-.login-container__form-right p, a{
-    font-size: 1.3em;
-    font-weight: 600;
-    padding: 1em 0px 0em;
-}
-
-.login-container__form-right-control{
-    align-self: center;
-    text-align: left;
-    width: 95%;
-}
-
-.login-container__form-right-control a{
-    color: #000;
-    font-size: 1.2em;
-    padding: 0;
-}
-
-.login-container__form-right-txt{
+.form__field label{
+	border: 2px solid #424242;
+	display: inline-block;
+	padding: 10px;
+	position: relative;
+    margin-bottom: 1em;
+    cursor: text;
+    border-radius: 10px;
     width: 100%;
-    font-size: 1.3em;
-    font-weight: 600;
-    color: black;
-    padding: 15px;
-    border: 1px solid #a5a5a5;
-    border-radius: 8px;
 }
 
-.login-container__form-right-button{
-    width: 90%;
-    margin: 0 auto;
-    font-weight: 600;
-    font-size: 1.3em;
-    color: #ffffff;
-    background-color: #004f71;
-    padding: 10px;
-    border: 2px solid #004f71;
-    border-radius: 5px;
-    transition: all 0.9s;
-    cursor: pointer;
-    justify-self: flex-end;
-}
-
-.login-container__form-right-button:hover{
-    transition : 0.9s;
-    background-color: #ffffff;
-    color: #004f71;
-    border: solid 2px #004f71;
-}
-
-.img-container{
-    background-image: url(/Login/SRC/IMG/3275434.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100%;
-    width:auto;
-}
-
-img{
-    width: 45%;
-}
-
-.login-container__help{
-    position: absolute;
-    z-index: 1;
-    right: 1.5em;
-    bottom: 2.5%;
-    text-decoration: none;
-    color: #004f71;
-}
-
-.help-container{
-    position: absolute;
-    right: -100%;
-    width: 25%;
-    height: 100%;
-    display: flex;
-    text-align: center;
-    justify-content: space-between;
-    flex-direction: column;
-    background-color: #faf9f8;
-    z-index: 10;
-    transition: all 0.8s;
-    box-shadow: 0px 0px 8px 1px #000000;
-}
-
-.help-container__close{
-    font-size: 1.3em;
-    font-weight: bolder;
+.form__field input, .form__field span{ 
+	border: none; 
+	box-sizing: border-box;
+	outline: none;
+	resize: none; 
+    font-size: 16px;
     width: 100%;
-    display: flex;
-    justify-content: space-between;
-    background-color: #01705f;
+    line-height: 16px;
+}
+
+.form__field span{
+	color: #424242;
+	display: inline-block;
+	left: 0px;
+	padding: 5px;
+	position: absolute;
+	transition: 0.25s;
+	top: 8px;
+	width: auto;
+}
+
+.form__field span.reubicar{
+	color: #424242;
+	font-size: 14px;
+	top: -22px;
+}
+
+.form__button{
+    background-color: #003366;
     color: #fff;
+    width: 250px;
+    height: 35px;
+    margin: 0 auto;
+    border-radius: 10px;
+    margin-top: 32px;
 }
 
-.help-container__close p{
-    font-size: 1.3em;
-    padding: 0.3em 1.5em;
-}
-
-.help-container__close i{
-    font-size: 1.3em;
-    padding: 0.5em 1em;
-}
-
-.help-container__close i:hover{
-    background-color: #009c86;
-}
-
-.mostrar{
-    right: 0;
-}
-
-.help-container__information-container p{
-    font-size: 1.2em;
-    padding: 0.1em;
-    padding-left: 1.5em;
-    text-align: left;
-    color: #000000;
-}
-
-.help-container__information-container{
-    height: 90%;
-}
-
-.help-container__icons-container{
-    width: 100%;
-    margin-top: 1em;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-}
-
-.help-container__icons-container a{
-    font-size: 1.2em;
-    display: flex;
-    text-align: left;
-    padding: 0.5em 2em;
-    align-items: center;
-    color: #2c2423;
-    text-decoration: none;
-}
-
-.help-container__icons-container img{
-    justify-self: left;
-    width: 2.5em;
-    border-radius: 30px;
-    transition: 1s;
-    margin-right: 1em;
-}
-
-.help-container__icons-container img:hover{
-    scale: 1.1;
-    transition: 0.5s;
+.form__button:hover{
+    background-color: #336699;
 }
