--- a/css/estilos_pagina-principal/style_pagina-principal.css
+++ b/css/estilos_pagina-principal/style_pagina-principal.css
@@ -1,123 +1,50 @@
-body{
-    width: 100%;
-    font-size: 12px;
-    font-family: 'Raleway', sans-serif;
-    color: #101010;
-    background-color: #fff;
-    display: flex;
-    flex-direction: column;
-}
-
-.header-container{
-    background-color: #004f71;
-    color: #fff;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 4.5em;
-    position: sticky;
-    top: 0;
-    left: 0;
-    z-index: 10000;
-}
-
-.header-container h2{
-    font-size: 1.5em;
-    margin-left: 0.5em;
-    user-select: none;
-}
-
-.header-container__search-container{
-    width: 500px;
-    padding: 3px;
-    background-color: #fff;
-    display: flex;
-    justify-content: space-between;
-    border-radius: 8px;
-}
-
-.header-container__search-container input{
-    width: 90%;
-    padding: 5px;
-    font-size: 1.3em;
-    border: none;
-}
-
-.header-container__search-container i{
-    color: #009c86;
-    font-size: 1.2em;
-    padding: 9px 8px;
-    border-radius: 5px;
-}
-
-.header-container__search-container i:hover{
-    background-color: #009c86;
-    color: #fff;
-}
-
-.seeting-container{
-    width: 15%;
-    text-align: right;
-}
-
-.seeting-container i{
-    font-size: 2.4em;
-    padding: 12px;
-}
-
-.seeting-container i:hover, .seeting-container a:hover{
-    background-color: #036e9c;
-}
-
-.header-container__settings-user-container-settings{
-    display: none;
-    position: absolute;
-    color: #101010;
-    text-align: left;
-    background-color: #f0f0f0;
-    top: 4.5em;
+.header{
+    background-color: #003366;
+    height: 100vh;
     width: 300px;
-    height: 150px;
-    right: 0;
-    box-shadow: 0px 2px 10px 1px #b1b1b1;
-}
-
-.header-container__settings-user-container-settings-sign-out{
-    display: flex;
-    justify-content: space-between;
-    padding: 5px;
-}
-
-.header-container__settings-user-container-settings-sign-out p{
-    font-size: 1.3em;
+    min-width: 70px;
     font-weight: bold;
+    position: relative;
 }
 
-.header-container__settings-user-container-settings-sign-out input{
-    padding: 5px;
+.header__h1{
+    font-size: 1.5em;
+    padding: 1em;
+    text-align: center;
 }
 
-.header-container__settings-user-container-settings-user-info{
-    display: flex;
+.header__navbar{
+    padding: 1.5em 0;
 }
 
-.menu-container{
+.header__link{
+    padding: 1em 1.5em;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.header__link > i{
+    padding-right: 15px;
+    font-size: 1.2em;
+}
+
+.header__link:hover{
+    background-color: #004386;
+}
+
+.header__link--close-sesion{
+    margin: 0;
     width: 100%;
-    background-color: #f3f2f1;
-    border-bottom: 1px solid #cfcfcf;
+    position: absolute;
+    bottom: 0;
+    background-color: rgb(175, 14, 14);
 }
 
-.menu-container__button {
-    background-color: #f3f2f1;
-    border: none;
-	cursor:pointer;
-	color:#000;
-    font-size: 1.3em;
-	padding: 1em 2.5em;
-    text-decoration: none;
-}
-.menu-container__button:hover {
-    background-color:#cecece;
+.header__link--close-sesion:hover{
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    background-color: rgb(204, 13, 13);
 }
 
 .my-documents-container, .new-document-container{
