--- a/css/style-error-page.css
+++ b/css/style-error-page.css
@@ -6,6 +6,8 @@
     justify-content: center;
     align-items: center;
     font-weight: bold;
+    position: fixed;
+    background-color: #fff;
 }
 
 .error-container__content-container{
