--- a/css/estilos_pagina-principal/style_pagina-principal.css
+++ b/css/estilos_pagina-principal/style_pagina-principal.css
@@ -1,6 +1,6 @@
 body{
     display: grid;
-    grid-template-columns: 300px 1fr;
+    grid-template-columns: 290px 1fr;
 }
 
 /*    **********************************
@@ -10,7 +10,7 @@ body{
 .header{
     background-color: #003366;
     height: 100vh;
-    width: 300px;
+    width: 290px;
     min-width: 70px;
     font-weight: bold;
     position: sticky;
@@ -97,9 +97,15 @@ body{
     text-align: center;
     cursor: pointer;
     border: 1px solid #ccc;
+    color: #646464;
 }
 
 .section__li:hover{
+    background-color: #e0e0e0;
+}
+
+.section__li--active{
+    color: #202020;
     background-color: #e0e0e0;
 }
 /*    ***********************************************
@@ -112,7 +118,7 @@ body{
  */
 .new-document__wrapper{
     width: 100%;
-    padding: 24px 5px;
+    padding: 10px;
     gap: 10px;
     display: grid;
     grid-auto-rows: 250px;
