--- a/css/estilos_pagina-principal/style_pagina-principal.css
+++ b/css/estilos_pagina-principal/style_pagina-principal.css
@@ -1,70 +1,11 @@
+*{
+    user-select: none;
+}
+
 body{
     display: grid;
     grid-template-columns: 290px 1fr;
 }
-
-/*    **********************************
- *    **    ESTILOS PARA EL HEADER    **
- *    **********************************
- */
-.header{
-    background-color: #003366;
-    height: 100vh;
-    width: 290px;
-    min-width: 70px;
-    font-weight: bold;
-    position: sticky;
-    top: 0;
-    left: 0;
-}
-
-.header__h1{
-    font-size: 1.5em;
-    padding: 1em;
-    text-align: center;
-}
-
-.header__navbar{
-    padding: 1.5em 0;
-}
-
-.header__link{
-    padding: 1em 1.5em;
-    margin-bottom: 10px;
-    cursor: pointer;
-}
-
-.header__link > i{
-    padding-right: 15px;
-    font-size: 1.2em;
-}
-
-.header__link:hover{
-    background-color: #004386;
-}
-
-.header__link--close-sesion{
-    margin: 0;
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    background-color: rgb(175, 14, 14);
-}
-
-.header__link--close-sesion:hover{
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    background-color: rgb(204, 13, 13);
-}
-
-.header__link--active{
-    background-color: #004386;
-}
-/*    *********************************************
- *    **    FIN DE LOS ESTILOS PARA EL HEADER    **
- *    *********************************************
- */
 /*    ************************************
  *    **    ESTILOS PARA LOS SECTION    **
  *    ************************************
@@ -107,6 +48,10 @@ body{
 .section__li--active{
     color: #202020;
     background-color: #e0e0e0;
+}
+
+.section--hidden{
+    display: none;
 }
 /*    ***********************************************
  *    **    FIN DE LOS ESTILOS PARA LOS SECTION    **
