Ajustando la tabla de clientes

--- a/css/estilos_pagina-principal/style_formulario-cliente.css
+++ b/css/estilos_pagina-principal/style_formulario-cliente.css
@@ -130,6 +130,9 @@ body{
     height: 45px;
     border-radius: 10px;
     grid-column: 3/5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .form__button:hover, .form__button:focus{
