--- a/css/estilos_pagina-principal/style_tabla-clientes.css
+++ b/css/estilos_pagina-principal/style_tabla-clientes.css
@@ -13,7 +13,8 @@ body{
  */
 .section{
     color: #202020;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
     display: grid;
     grid-template-rows: 105px 1fr;
 }
@@ -125,19 +126,93 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #004386;
-    display: flex;
+    backdrop-filter: blur(2px);
+    background-color: #b1b1b127;
+    display: none;
     justify-content: center;
     align-items: center;
 }
 
+.modal-container--show{
+    display: flex;
+}
+
 .modal-container__modal{
     color: #202020;
-    font-size: 2em;
     width: max-content;
-    height: 500px;
+    min-width: 50%;
+    padding: 15px 32px 8px;
+    height: 80%;
     background-color: #fafafa;
+    position: relative;
+    border-radius: 15px;
+    box-shadow: 0 0 10px #202020;
 }
+
+.modal-container__icon{
+    position: absolute;
+    font-size: 2em;
+    color: #003366;
+    top: -16px;
+    right: -16px;
+    background-color: #fff;
+    border-radius: 50%;
+    transition: all 0.2s;
+}
+
+.modal-container__icon:hover{
+    color: #af0000;
+    transition: all 0.2s;
+}
+
+.modal-container__ul{
+    height: 90%;
+    align-items: center;
+    display: grid;
+    gap: 10px 20px;
+    grid-template-rows: repeat(8, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.modal-container__ul >li > b{
+    font-size: 1.1em;
+    font-weight: bold;
+}
+
+.modal-container__button-container{
+    display: flex;
+    justify-content: space-evenly;
+    height: 10%;
+    align-items: center;
+}
+
+.modal-container__button{
+    display: inline;
+    background-color: #003366;
+    border-radius: 10px;
+    width: 250px;
+    height: 40px;
+    font-weight: bold;
+    color: #fff;
+}
+
+.modal-container__button:hover{
+    background-color: #004386;
+}
+
+
+.modal-container__button > i{
+    margin-right: 5px;
+}
+
+.modal-container__button--delete{
+    background-color: #af0000;
+}
+
+.modal-container__button--delete:hover{
+    background-color: #e20000;
+}
+
 /*    *****************************
  *    **    ESTILOS DEL MODAL    **
  *    *****************************
