Preparando para guardar archivos

--- a/css/estilos_pagina-principal/style_formulario-cliente.css
+++ b/css/estilos_pagina-principal/style_formulario-cliente.css
@@ -136,7 +136,7 @@ body{
 }
 
 .form__button:hover, .form__button:focus{
-    background-color: #004386;;
+    background-color: #004386;
 }
 
 .form__field:nth-child(4){
