--- a/css/estilos_pagina-principal/style_nuevo-documento.css
+++ b/css/estilos_pagina-principal/style_nuevo-documento.css
@@ -1,131 +1,75 @@
-/* Estilos */
-*::selection {
-  background: #C2CAE4;
-  color: #404040;
-}
-
-html {
-  scroll-behavior: smooth;
-  overflow-x: hidden;
-}
-
 body{
-  font-family: 'Raleway', sans-serif;
-  font-size: 12px;
+  display: grid;
+  grid-template-columns: 290px 1fr;
 }
 
-li {
-  list-style-type: none;
+/*    ***********************************
+ *    **    ESTILOS PARA EL SECTION    **
+ *    ***********************************
+ */
+ .section{
+  color: #202020;
 }
 
-.return {
-  text-decoration: none;
+.section__header{
+  background-color: #f0f0f0;
+}
+
+.section__h2{
+  font-size: 1.3em;
+  padding: 0.5em 1em;
+  text-align: center;
+}
+
+.section__h3{
+  padding: 0.5em;
+  text-align: center;
+  border: 1px solid #ccc;
+  font-weight: bold;
+}
+
+.section__button{
+  display: inline;
+  background-color: #003366;
+  width: 250px;
+  padding: 8px 0;
+  font-weight: bold;
   color: #fff;
-  font-size: 1.2em;
-  padding: 1.3em 2em;
-  user-select: none;
+  margin-top: 1em;
+  border-radius: 10px;
 }
 
-.return:hover {
-  background-color: #4363A3;
+.section__button--cancel{
+  background-color: rgb(175, 14, 14);
 }
 
-label, p, span{
-  user-select: none;
+.section__button:hover{
+  background-color: #004386;
 }
 
-/*    ****************************************
- *    **    ESTILOS DE HOJA DE GENERALES    **
- *    ****************************************
- */
-.identificador-tramites {
+.section__button--cancel:hover{
+  background-color: rgb(204, 13, 13);
+}
+/*    **********************************************
+*    **    FIN DE LOS ESTILOS PARA EL SECTION    **
+*    **********************************************
+*/
+.tramites-container__item-form-container-form{
+  padding: 9px 24px 10px;
   position: relative;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 15px 5px;
-  padding: 10px 0;
-  background: #036e9c;
-  color: #fff;
 }
 
-.identificador-tramites .field {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 0 5px;
-}
-
-.identificador-tramites .field input[type="text"],
-.identificador-tramites .field textarea {
-  outline: none;
-  border: 3px solid #3da5d1;
-  background: rgba(255,255,255,1);
-  cursor: text;
-  border-radius: 5px;
-  padding: 5px;
-  font-size: 0.95em;
-  transition: 0.3s ease all;
-}
-
-.identificador-tramites .field input[type="text"]:focus,
-.identificador-tramites .field textarea:focus {
-  border: 3px solid rgba(47, 141, 182, 0.7);
-  box-shadow: 0 0 10px 0 rgba(255,255,255,0.3);
-}
-
-.identificador-tramites .field input[type="text"]:valid,
-.identificador-tramites .field textarea:valid {
-  border: 3px solid rgba(38, 206, 80, 0.8);
-}
-
-.identificador-tramites .field input[type="text"]:not(:focus):not(:placeholder-shown):invalid,
-.identificador-tramites .field textarea:not(:focus):not(:placeholder-shown):invalid {
-  border: 3px solid rgba(255, 152, 121, 0.8);
-}
- /*   ********************************************
- *    **    FIN ESTILOS DE HOJA DE GENERALES    **
- *    ********************************************
- */
-
-
- /*   **********************************
- *    **    ESTILOS DEL FORMULARIO    **
- *    **********************************
- */
-.tramites-container{
-  width: 100%;
-  padding: 0 0 5em;
-  display: block;
-}
-
-.tramites-container__item-form-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: start;
-  width: 100%;
+.tramites-container__item-form-container-form > div{
+  padding: 15px 0;
 }
 
 .tramites-container__item-form-container-label {
-  font-size: 1.2em;
   margin-bottom: 0.8em;
   text-align: center;
 }
 
 .tramites-container__item-form-container .asterisk {
   color: red;
-}
-
-.tramites-container__item-form-container-form {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  gap: 1em;
 }
 
 .tramites-container__item-form-container-form .simple-check-field .file {
@@ -137,7 +81,7 @@ label, p, span{
 }
 
 .tramites-container__item-form-container-form .simple-check-field .file .file-name {
-  font-weight: 900;
+  font-weight: bold;
   color: #404040;
   transition: 1.2s ease color;
 }
@@ -154,7 +98,6 @@ label, p, span{
   align-items: center;
   padding-bottom: 0.6em;
   box-shadow: 0 2px #C2CAE4;
-  width: 85%;
   margin: 0 auto;
 }
 
@@ -167,7 +110,6 @@ label, p, span{
 }
 
 .tramites-container__item-form-container-form .simple-check-field .check label {
-  font-size: 1.4em;
   cursor: pointer;
 }
 
@@ -225,12 +167,7 @@ label, p, span{
   gap: 0.3em;
   box-shadow: 0 2px #C2CAE4;
   padding-bottom: 1em;
-  width: 85%;
   margin: 0 auto;
-}
-
-.tramites-container__item-form-container-form .compound-check-field .title {
-  font-size: 1.4em;
 }
 
 .tramites-container__item-form-container-form .compound-check-field .simple-check-field {
@@ -238,10 +175,11 @@ label, p, span{
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 0.6em 0;
-  margin-left: 1.4em;
+  padding: 8px 0;
+  margin-left: 0;
   box-shadow: none;
   border-bottom: 4px dotted rgba(0,0,0,0.3);
+  width: 95%;
 }
 
 .tramites-container__item-form-container-form .compound-check-field .simple-check-field .check input {
@@ -265,7 +203,6 @@ label, p, span{
 }
 
 .tramites-container__item-form-container-form .compound-check-field .simple-check-field .check label {
-  font-size: 1.1em;
   cursor: pointer;
 }
 
@@ -287,7 +224,6 @@ label, p, span{
   outline: none;
   padding: 0.4em 1.4em;
   border-radius: 0.5em;
-  font-size: 1.4em;
   transition: 0.3s ease all;
   transform: scale(0.95);
 }
@@ -323,55 +259,4 @@ label, p, span{
 /*   ***************************************
  *   **     FIN ESTILOS DEL FORMULARIO    **
  *   ***************************************
- */
-
- /*   ****************************
- *    **    ESTILOS DEL POPUP   **
- *    ****************************
- */
-.popup-container{
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  background-color: #0c0c0cb6;
-  z-index: 10000000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.popup-container__modal{
-  width: 70%;
-  height: 98%;
-}
-
-.popup-container__modal > embed{
-  width: 100%;
-  height: 90%;
-  background-color: #3da5d1;
-  margin-bottom: 1em;
-}
-
-.popup-container__modal > button{
-  background-color: #036e9c;
-  width: 150px;
-  height: 35px;
-  border: none;
-  color: #fff;
-  margin-left: calc(50% - 75px);
-  font-size: 14px;
-  border-radius: 5px;
-}
-
-.popup-container__modal > button:hover{
-  background-color: #057db1;
-}
-
-.hide-popup{
-  display: none;
-}
-
-/*   *********************************
- *   **     FIN ESTILOS DEL POPUP   **
- *   *********************************
  */
